--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/ZengjfOS/MDPlantLib#readme",
   "dependencies": {
     "fs-extra": "^10.1.0",
+    "node-xlsx": "^0.21.0",
     "plantuml-encoder": "^1.4.0"
   }
 }
